# server-app/src/main/java/com/bancosimple/backend/security/dto/LoginResponse.java
@@ -1,14 +1,38 @@
 package com.bancosimple.backend.security.dto;
 
+import com.fasterxml.jackson.annotation.JsonIgnore;
+import com.fasterxml.jackson.annotation.JsonProperty;
 import lombok.AllArgsConstructor;
+import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 
 @Data
 @NoArgsConstructor
 @AllArgsConstructor
+@Builder
 public class LoginResponse {
     private String token;
     private String email;
     private String role;
+
+    @JsonIgnore
+    private String firstName;
+
+    @JsonIgnore
+    private String lastName;
+
+    @JsonProperty("fullName")
+    public String getFullName() {
+        if (firstName == null && lastName == null) {
+            return "";
+        }
+        if (firstName == null) {
+            return lastName;
+        }
+        if (lastName == null) {
+            return firstName;
+        }
+        return firstName + " " + lastName;
+    }
 }
